<resources>
    <string name="app_name">Pop Movies</string>
    <string name="app_name2">MovieDetail</string>
    <string name="sort_mostpopular">Sort by Most Popular</string>
    <string name="sort_by_rated">Sort by Top Rated</string>
    <string name="sort_by_favorite">Sort by Top Favorite</string>
    <string name="mark_fav">Mark as Favorite</string>
    <string name="details">details</string>
    <string name="minutes">120min</string>
    <string name="reviews">Reviews:</string>
    <string name="favorite">Added to Favorite</string>
    <string name="favoriteNotOk">Add To Favorite</string>
    <string name="title">Title</string>
    <string name="trailers">Trailers:</string>
</resources>
